# codex-history-migrator

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  build.rs
.github/workflows/: ci.yml  release.yml
scripts/: package-linux.sh  package-macos.sh
src/: app.rs  lib.rs  main.rs  platform.rs
src/core/: checksum.rs  export.rs  import.rs  manage.rs  merge.rs  mod.rs  path_rewrite.rs  provider_sync.rs  scan.rs
src/db/: mod.rs  sqlite.rs  threads.rs
src/fs/: codex_home.rs  mod.rs  package.rs
src/models/: export_report.rs  import_report.rs  manage.rs  manifest.rs  mod.rs  operation_progress.rs  provider_count.rs  provider_sync_report.rs  provider_sync_status.rs  scan_report.rs  thread_record.rs
src/ui/: export.rs  fonts.rs  import.rs  logs.rs  manage.rs  mod.rs  overview.rs  sync.rs
tests/: export_package.rs  font_config.rs  import_package.rs  manage_core.rs  manifest_roundtrip.rs  merge_threads.rs  package_safety.rs  path_rewrite.rs  platform_support.rs  progress_callbacks.rs  provider_sync.rs  windows_subsystem.rs
tests/support/: mod.rs
