[package]
name = "codex-history-migrator"
version = "1.1.0"
edition = "2024"
build = "build.rs"
description = "Lightweight cross-platform desktop GUI tool for Codex local history migration and provider sync"
license = "MIT"
readme = "README.md"
repository = "https://github.com/qiufengawa/codex-history-migrator"
homepage = "https://github.com/qiufengawa/codex-history-migrator"

[dependencies]
anyhow = "1.0"
eframe = "0.31"
rfd = "0.15"
rusqlite = { version = "0.31", features = ["backup", "bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.15"
thiserror = "1.0"
walkdir = "2.5"
zip = "2.2"
png = "0.17"

[build-dependencies]
winresource = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
